# MechCommanderNoCDPatcher

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build-n-run.bat  build-release.bat  win10_compat.manifest  win10_support.props
.github/workflows/: release.yml
src/: main.c  patch.c  patch.h
